Fix spacing and form button width

--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ nav a {
 }
 
 .performers-info p {
-  margin-bottom: 4em;
+  margin-bottom: 3em;
 }
 
 .performers figure {
@@ -386,6 +386,7 @@ input {
   border: 1px solid #00ffbe;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
   text-transform: uppercase;
+  width: 10em;
 }
 
 /* Territorial Acknowledgement */
@@ -932,6 +933,7 @@ details[open] summary .fa-arrow-down {
   .performers {
     margin: 2em auto;
     max-width: 1170px;
+    padding-bottom: 1em;
   }
 
   .performers-info {
@@ -940,7 +942,7 @@ details[open] summary .fa-arrow-down {
   }
 
   .performers-info p {
-    padding: 2em 0 3em 0;
+    padding: 2em 0 2em 0;
   }
 
   .performers h3 {
@@ -1080,7 +1082,7 @@ details[open] summary .fa-arrow-down {
 
   .submit {
     margin: 3em auto;
-    width: 15em;
+    width: 12em;
     padding: .6em;
     font-size: 1.5rem;
   }
